# DivergeDE

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
data/real/: README.md
data/real/mouse_bone/: README.md  branch_probabilities.csv  cell_type.csv  pseudotime.csv
data/simulated/simulation_1/: README.md  cell_metadata.csv  counts.csv  gene_truth.csv
data/simulated/simulation_2/: README.md  cell_metadata.csv  counts.csv  gene_truth.csv
examples/: evaluate_simulations.py  simulation_1.py  simulation_2.py
src/divergede/: __init__.py  _model.py  _validation.py  fitting.py  plotting.py  result.py  three_branch.py  three_branch_plotting.py
tests/: test_fit_and_plot.py  test_model.py  test_validation.py
